--- a/view/contribute.ejs
+++ b/view/contribute.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Sorry! 在线生成(node版)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/w3.css" />
+  <link rel="stylesheet" href="/sorry/w3.css" />
   <%- statScript %>
   <!-- your code -->
 </head>
@@ -20,7 +20,7 @@
     <button id="show_sidebar" class="w3-btn w3-circle w3-text-black w3-white w3-xlarge w3-display-topleft">☰</button>
     <h2 class="w3-text-blue w3-center w3-show-inline-block">在线生成gif</h2>
 
-    <a class="w3-display-topright w3-btn" href="https://github.com/lipinghai/node-sorry" target="_blank">
+    <a class="w3-display-topright w3-btn" href="https://github.com/cuo9958/node-sorry" target="_blank">
       <svg aria-hidden="true" class="w3-opacity" height="43" version="1.1" viewBox="0 0 16 16" width="24">
         <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
       </svg>
@@ -34,7 +34,7 @@
         欢迎创意满满的你投稿，充实我们的模板库，给大家带来更多乐趣~
       </p>
       <p>
-        请将mp4文件和ass文件(参考右上方链接github仓库里的制作说明)压缩发送到twopoles@163.com
+        请将mp4文件和ass文件(参考右上方链接github仓库里的制作说明)压缩发送给我
       </p>
       <p>
         另外，喜欢本项目的朋友也欢迎点个star,感谢！
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <script src="/main.js"></script>
+  <script src="/sorry/main.js"></script>
 </body>
 
 </html>
