--- a/view/gif.ejs
+++ b/view/gif.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Sorry! 在线生成(node版)</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/sorry/w3.css" />
+    <link rel="stylesheet" href="/w3.css" />
     <%- statScript %>
 
     <!-- your code -->
@@ -31,7 +31,7 @@
     <!-- Main Frame -->
     <div class="w3-container w3-display-container w3-half">
         <div class="w3-container">
-            <img src="/sorry/template/<%= template.name %>/sample.gif" style="width:100%">
+            <img src="/template/<%= template.name %>/sample.gif" style="width:100%">
         </div>
         <div class="w3-container">
         <% template.defaultDialogue.forEach(function(dialogue, index){ %>
@@ -44,8 +44,8 @@
         </p>
         </div>
     </div>
-    <script src="/sorry/cookies.js"></script>
-    <script src="/sorry/main.js"></script>
+    <script src="/cookies.js"></script>
+    <script src="/main.js"></script>
 </body>
 
 </html>
