--- a/view/contribute.ejs
+++ b/view/contribute.ejs
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Sorry! 在线生成(node版)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/sorry/w3.css" />
+  <link rel="stylesheet" href="/w3.css" />
   <%- statScript %>
   <!-- your code -->
 </head>
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <script src="/sorry/main.js"></script>
+  <script src="/main.js"></script>
 </body>
 
 </html>
